# bs-quest-song-manager

./: README.md  biome.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  bindings.ts  global.d.ts  main.tsx  typeUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/macros/: Cargo.toml
src-tauri/macros-impl/: Cargo.toml
src-tauri/macros-impl/src/: lib.rs
src-tauri/macros/src/: lib.rs
src-tauri/src/: cache.rs  constant.rs  main.rs  specta.rs  state.rs  utils.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/beatsaver/: map.rs
src-tauri/src/app/: deeplink.rs  mod.rs  state.rs
src-tauri/src/app/command/: cache.rs  config.rs  level.rs  misc.rs  mod.rs  playlist.rs  scan.rs
src-tauri/src/command/: config.rs  level.rs  mod.rs  playlist.rs  scan.rs
src-tauri/src/core/: level.rs  mod.rs  scan.rs
src-tauri/src/interface/: config.rs  connection.rs  dump.rs  mod.rs  playlist.rs  scan.rs
src-tauri/src/interface/level/: impl.rs  impls.rs  mod.rs
src-tauri/src/interface/playlist/: impls.rs  mod.rs
src-tauri/src/router/: config.rs  level.rs  mod.rs  playlist.rs  scan.rs
src-tauri/src/router/scan/: load.rs
src-tauri/src/state/: cache.rs  config.rs  mod.rs
src-tauri/test-data/playlist/: 1.json
src/components/: Image.tsx  LinkHandler.tsx  SetRootDir.tsx  Table.tsx  ThemeSelector.tsx  contextMenu.tsx
src/components/DownloadQueueContext/: DownloadQueue.ts  index.tsx
src/home/: DownloadQueueContext.tsx  LevelList.tsx  PlaylistList.tsx  Topbar.tsx  index.tsx  selectedPlaylist.ts
src/home/LevelList/: AddLevel.tsx  DetailPanel.tsx  RowActions.tsx  SelectToolbar.tsx  Toolbar.tsx  index.tsx  useExtendedPlaylist.ts
src/home/LevelList/Toolbar/: AddLevel.tsx  SortPlaylist.tsx  SplitPlaylist.tsx  index.tsx
src/home/PlaylistList/: AddPlaylist.tsx  RowActions.tsx  SelectToolbar.tsx  Toolbar.tsx  index.tsx
src/home/PlaylistList/Toolbar/: AddPlaylist.tsx  index.tsx
src/home/Topbar/: ChangeRootButton.tsx  QueueViewer.tsx  index.tsx
src/lib/: batchDownload.ts  useAddPlaylist.ts  useScanStart.ts
src/page/: Home.tsx  LevelList.tsx  PlaylistList.tsx  Scan.tsx
