[package]
name = "bs-quest-song-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "=2.0.0-rc.7"
tauri-specta = { version = "=2.0.0-rc.4", features = [
  "javascript",
  "typescript",
] }
tokio = { version = "1.35.1", features = ["fs", "macros"] }
eyre = "0.6.11"
macro_rules_attribute = "0.2.0"
macros = { path = "./macros" }
dirs = "5.0.1"
once_cell = "1.19.0"
opendal = { version = "0.43.0", features = [
  "services-cacache",
], default-features = false }
regress = "0.7.1"
futures = "0.3.30"
sha1 = "0.10.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["macros", "macros-impl"]

[workspace.dependencies]
proc-macro2 = "1.0.71"
