[package]
name = "bs-quest-song-manager"
version = "0.0.0"
description = "Song manager for beatsaber on quest"
authors = ["nazo6"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
reqwest = { version = "0.11.23", features = ["json"] }
tauri = { version = "1.5", features = [
  "protocol-asset",
  "dialog-all",
  "shell-open",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "=2.0.0-rc.7"
tokio = { version = "1.35.1", features = ["fs", "macros"] }
eyre = "0.6.11"
dirs = "5.0.1"
once_cell = "1.19.0"
opendal = { version = "0.44.0", features = [
  "services-sled",
], default-features = false }
futures = "0.3.30"
sha1 = "0.10.6"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip-extensions = "0.6.2"
# console-subscriber = "0.2.0"
tauri-specta = { version = "=2.0.0-rc.4", features = [
  "javascript",
  "typescript",
] }
tauri-plugin-context-menu = { git = "https://github.com/c2r0b/tauri-plugin-context-menu", branch = "main" }
url = "2.5.0"
serde_path_to_error = "0.1.15"
sanitize-filename = "0.5.0"
tauri-utils = "1.5.2"
percent-encoding = "2.3.1"

[target.'cfg(windows)'.dependencies]
interprocess = { version = "1.2", default-features = false }
windows-sys = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.52.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
